--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ Box
 
  */
 
+
+ /* Global */
+
 body {
   background: #e5e5e5;
   color: #25282B;
@@ -18,6 +21,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 
   margin: 0;
+}
+
+body.hideScroll {
+  overflow: hidden;
 }
 
 .hide {
@@ -40,9 +47,34 @@ p, .description {
   letter-spacing: 0.1px;
 }
 
+.button {
+  background: #ff5E84;
+  color: white;
+
+  width: 150px;
+  height: 40px;
+
+  border-radius: 8px;
+
+  font-size: 14px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  box-shadow: 0px 8px 16px #ff5E8443;
+}
+
+.button:hover {
+  background-color: #0984e3;
+  text-decoration: none;
+}
+
+/* Padrão */
 
 #container {
-  width: 98%;
+  width: 80%;
   max-width: 980px;
 
   margin: 40px auto;
@@ -53,7 +85,7 @@ p, .description {
 #intro {
   width: 300px;
 
-  margin-right: 20px;
+  margin-right: 64px;
 }
 
 main {
@@ -86,22 +118,6 @@ button {
 
 button:hover {
   text-decoration: underline;
-}
-
-button.fat {
-  background: #ff5E84;
-  color: white;
-
-  width: 150px;
-  height: 40px;
-
-  border-radius: 6px;
-
-  box-shadow: 0px 8px 16px #ff5E8443;
-}
-
-button.fat:hover {
-  text-decoration: none;
 }
 
 footer {
@@ -158,9 +174,9 @@ footer a {
 
   position: absolute;
   top: 0;
-
-  width: 100vw;
-  height: 100vh;
+  bottom: 0;
+  right: 0;
+  left: 0;
 
   display: flex;
   justify-content: center;
@@ -168,8 +184,12 @@ footer a {
   transition: 400ms;
 }
 
+#modal.addScroll {
+  overflow: auto;
+}
+
 #modal .content {
-  margin-top: 128px;
+  margin-top: 5%;
 
   color: white;
 }
@@ -184,7 +204,7 @@ footer a {
   width: 80%;
   max-width: 800px;
 
-  margin: 0 auto;
+  margin: 0 auto 15%;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -278,4 +298,70 @@ form button:hover {
 #modal.hide {
   opacity: 0;
   visibility: hidden;
+}
+
+/* IDEIA.HTML */
+
+#page-ideas #container {
+  display: block;
+}
+
+#page-ideas header {
+  display: flex;
+  justify-content: space-between;
+}
+
+#page-ideas nav {
+  display: flex;
+  align-items: center;
+}
+
+#page-ideas nav li {
+  list-style-type: none;
+
+  margin-right: 16px;
+}
+
+#page-ideas nav li a {
+  color: #25282B;
+}
+
+#page-ideas nav li a.button {
+  color: white;
+}
+
+#page-ideas nav li:last-child {
+  margin: 0;
+}
+
+section#title {
+  text-align: center;
+}
+
+section#title p {
+  opacity: 0.7;
+  margin: 0;
+}
+
+section#title h1 {
+  margin: 0;
+
+  font-size: 28px;
+}
+
+section#ideas {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  gap: 20px;
+}
+
+section#ideas .idea {
+  margin: 0;
+}
+
+section#title,
+section#ideas,
+footer {
+  margin-top: 64px;
 }
